2024-01-13T08:17:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7511292787 # 19
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-13
* notice: last 14d: unq all: 2 10
* notice: prev accum: outdated-unq outdated-all / unq all: 588 1010 / 596 1022
* notice: next accum: outdated-unq outdated-all / unq all: 589 1012 / 596 1022
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-12-30] / []

2024-01-12T08:18:59Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7499599115 # 16
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-12
* notice: last 14d: unq all: 3 12
* notice: prev accum: outdated-unq outdated-all / unq all: 588 1010 / 595 1021
* notice: next accum: outdated-unq outdated-all / unq all: 588 1010 / 596 1022
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-12]

2024-01-11T16:19:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7491547955 # 14
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-11
* notice: last 14d: unq all: 3 11
* notice: prev accum: outdated-unq outdated-all / unq all: 588 1010 / 594 1020
* notice: next accum: outdated-unq outdated-all / unq all: 588 1010 / 595 1021
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-11]

2024-01-10T16:19:36Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7477773298 # 11