@@ -1,6 +1,6 @@
 {
-  "count": 10,
-  "uniques": 2,
+  "count": 11,
+  "uniques": 3,
   "clones": [
     {
       "timestamp": "2024-01-07T00:00:00Z",
@@ -29,6 +29,11 @@
     },
     {
       "timestamp": "2024-01-12T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-01-13T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
